--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <nav class="Nav-Bar">
-        <img src="./Assets/ULTIMA FASEEEEE.png" alt="">
+        <img src="./Assets/ULTIMA FASEEEEE.png" alt="logo">
         <ul class="Nab-Bar-List">
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Nosotros</a></li>
@@ -20,5 +20,28 @@
         </ul>
     </nav>
     </header>
+    <main>
+        <section id="hero">
+            <div class="hero-info">
+            <h1>Encontra todo lo que necesites para tu cobayo.</h1>
+                <p>
+                Somos <span>Mundo Benito </span>, el unico Pet Shop enfocado 100% hacia cobayos. 
+                </p>
+                <a href="">Sobre Nosotros</a>
+                <a href="">Contacto</a>
+            </div> 
+            <div class="hero-card">
+             <img src="./Assets/benito comiendo.jpg" alt="Cobayo">
+            </div>
+           </section>
+
+        <section class="info">
+            <h2>Quienes Somos</h2>
+            <p>Mundo Benito es un Pet Shop exclusivo para cobayos, fundado en 2018, con 5 años en el mercado. Podes encontranos en la ciudad Avellaneda (Santa Fe).
+            <br><br>
+               Tenemos todo lo que tu pequeño necesita desde heno, alfalfa, piedras minerales, alimento balanceado y mucho mas. No dudes en contactarnos !!!
+            </p>
+        </section>
+    </main>
 </body>
 </html>
